--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,15 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^6",
-        "squizlabs/php_codesniffer": "^2.6",
+        "php": "^7.1",
+        "symfony/serializer": "^3.3",
         "symfony/filesystem": "^3",
         "symfony/finder": "^3",
         "symfony/process": "^3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6",
+        "squizlabs/php_codesniffer": "^2.6"
     },
     "autoload": {
         "psr-4": {
