--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
     command: sh -c 'composer install && php vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php . && php vendor/bin/phpunit'
     volumes:
       - ./:/code
+    environment:
+      KBC_COMPONENTID: keboola.sliced-files-downloader
   tests-ci:
     image: keboola/sliced-files-packer
     command: sh -c 'php vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php . && php vendor/bin/phpunit'
+    environment:
+      KBC_COMPONENTID: keboola.sliced-files-downloader
