--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "keboola/sliced-files-packer",
+    "description": "Component to prepare zip package with sliced files",
     "license": "MIT",
     "type": "project",
     "require": {
@@ -17,5 +18,13 @@
         "psr-4": {
             "Keboola\\": "src/Keboola/"
         }
+    },
+    "scripts": {
+        "phpunit": "phpunit --colors=always",
+        "phpcs": "phpcs --standard=psr2 -n --ignore=vendor --extensions=php .",
+        "tests": [
+            "@phpcs",
+            "@phpunit"
+        ]
     }
 }
