--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,28 @@
 version: '2'
+
 services:
+
   dev:
     build: .
     image: keboola/sliced-files-packer
     mem_limit: 128m
     tty: true
     stdin_open: true
-    command: sh -c 'composer install && php vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php . && php vendor/bin/phpunit'
+    command: >-
+             sh -c '
+             composer install
+             && composer run-script tests
+             '
     volumes:
       - ./:/code
     environment:
       KBC_COMPONENTID: keboola.sliced-files-downloader
+
   tests-ci:
     image: keboola/sliced-files-packer
-    command: sh -c 'php vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php . && php vendor/bin/phpunit'
+    command: >-
+             sh -c '
+             composer run-script tests
+             '
     environment:
       KBC_COMPONENTID: keboola.sliced-files-downloader
