Add dev and prod php.ini settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
              '
     volumes:
       - ./:/code
+      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
     environment:
       KBC_COMPONENTID: keboola.sliced-files-downloader
 
