--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_script:
   - docker -v
   - docker-compose -v
   - docker-compose build
+  - docker images
 script: docker-compose run --rm tests-ci
 deploy:
   provider: script
